--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "nsis": {
       "oneClick": true,
       "shortcutName": "Builder 테스트 프로그램",
-      "artifactName": "Builder 테스트 프로그램 ${version}.${ext}",
+      "artifactName": "${productName}-Setup-${version}.${ext}",
       "uninstallDisplayName": "Builder 테스트 프로그램"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "electron-updater": "^4.2.5"
+  },
   "devDependencies": {
     "electron": "8.2.0",
     "electron-builder": "^22.4.1"
